# axum-file-stream-demo

./: .gitignore  Cargo.toml  README.md
src/: docs.rs  errors.rs  main.rs  state.rs
src/files/: routes.rs
tests/: test.sh
