[package]
name = "file-streams"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
aide = { version = "0.13.4", features = ["redoc", "scalar", "axum", "axum-extra", "macros", "axum-multipart"] }
async-trait = "0.1.57"
axum = { version = "0.7.5", features = ["macros", "multipart"] }
axum-extra = "0.9.0"
axum-jsonschema = { version = "0.8.0", features = ["aide"] }
axum-macros = "0.4.0"
schemars = { version = "0.8.10", features = ["uuid1"] }
serde = { version = "1.0.144", features = ["derive", "rc"] }
serde_json = "1.0.85"
tokio = { version = "1.21.0", features = ["macros", "rt-multi-thread", "fs", "io-util"] }
uuid = { version = "1.1.2", features = ["serde", "v4"] }
