[package]
name = "file-streams"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
aide = { version = "0.13", features = [
    "redoc",
    "scalar",
    "axum",
    "axum-extra",
    "macros",
    "axum-multipart",
] }
async-trait = "0.1"
axum = { version = "0.7", features = ["macros", "multipart"] }
axum-extra = "0.9"
axum-jsonschema = { version = "0.8", features = ["aide"] }
axum-macros = "0.4"
schemars = { version = "0.8", features = ["uuid1"] }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
tokio = { version = "1.21", features = [
    "macros",
    "rt-multi-thread",
    "fs",
    "io-util",
] }
uuid = { version = "1.1", features = ["serde", "v4"] }
